# DeFlash-Builder

./: CMakeLists.txt  README.md  animationframe.cpp  animationframe.h  config.cpp  config.h  filepicker.cpp  filepicker.h  filepicker.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newprojectwizard.cpp  newprojectwizard.h  painter.cpp  painter.h  projectdialog.cpp  projectdialog.h  projectdialog.ui  projectfile.cpp  projectfile.h  tool.h  version.h  videoexporter.cpp  videoexporter.h
